chkwpa.conf: restyle

--- a/cfg/chkwpa.conf
+++ b/cfg/chkwpa.conf
@@ -1,12 +1,14 @@
 #
-# /etc/captal/chkwpa.conf: captal-chkwpa tool configuration
+# @ETCDIR@/captal/chkwpa.conf: captal-chkwpa configuration
 #
 
-# Check obtained WPA(2) password via (aircrack, cowpatty):
+# Check obtained WPA(2) password via (aircrack, cowpatty).
 CHECK_TOOL=aircrack
 
-# The location of CAP file with sniffed WPA* handshakes:
+# The location of CAP file with sniffed WPA* handshakes.
 CAP_FILE=/tmp/output-01.cap
 
-# SSID to brute (may be the same, declared as Roque AP)
-SSID=Crux
+# SSID to brute (may be the same, declared as Roque AP).
+SSID=MyAP31337
+
+# End of file.
