--- a/cfg/dhcpd.conf
+++ b/cfg/dhcpd.conf
@@ -1,3 +1,7 @@
+#
+# @ETCDIR@/captal/dhcpd.conf: dhcpd(1) configuration
+#
+
 subnet 192.168.254.0 netmask 255.255.255.0 {
 	authoritative;
 
@@ -11,3 +15,5 @@ subnet 192.168.254.0 netmask 255.255.255.0 {
 
 	range 192.168.254.100 192.168.254.254;
 }
+
+# End of file.
