hostapd.conf: restyle

--- a/cfg/hostapd.conf
+++ b/cfg/hostapd.conf
@@ -1,17 +1,19 @@
-##########################
-# Roque AP Configuration #
-##########################
+#
+# @ETCDIR@/captal/hostapd.conf: Roque AP configuration
+#
 
-# AP interface
+# AP interface.
 interface=wlp0s20u2u4
 
-# Driver interface type (hostap/wired/none/nl80211/bsd):
+# Driver interface type (hostap/wired/none/nl80211/bsd).
 driver=nl80211
 
-# SSID to be used and channel
-ssid=Сrux
+# SSID to be used and channel.
+ssid=MyAP31337
 channel=1
 
 auth_algs=1
 ignore_broadcast_ssid=0
 wpa=0
+
+# End of file.
