lighttpd.conf: fix pid-file path (/var/run -> /run)

--- a/cfg/lighttpd.conf
+++ b/cfg/lighttpd.conf
@@ -129,7 +129,7 @@ fastcgi.server = (
 )
 
 server.port = 80
-server.pid-file = "/var/run/lighttpd.pid"
+server.pid-file = "/run/lighttpd.pid"
 # server.username = "www"
 # server.groupname = "www"
 
